aws_alb_example/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-https
  namespace: {your-name}
spec:
  selector:
    app: https
  ports:
  - port: 8080
